# plugins

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  OWNERS  README.md  changelog-gen.sh  registry.yaml  release.md  update-readme.sh
.github/: PULL_REQUEST_TEMPLATE.md  clang-format-check.sh  compare-rule-files.sh  dependabot.yml  extract-plugins-deps-from-rulesfile.sh  get-config-file.sh  get-latest-plugin-version.sh  setup-plugin-config-rules.sh  validate-rules.sh
cloudtrail/: cloudtrail.go  go.mod  go.sum
docs/: best-practices.md  plugin-ids.md  registering-a-plugin.md
jevt/: go.mod  jevt.go
plugins/: PLUGINS-REGISTRY.md
plugins/anomalydetection/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
plugins/anomalydetection/cmake/modules/: libs.cmake  plugin-sdk-cpp.cmake  xxhash.cmake
plugins/anomalydetection/src/: plugin.cpp  plugin.h  plugin_consts.h  plugin_mutex.h  plugin_sinsp_filterchecks.h  plugin_thread_manager.h  plugin_utils.cpp  plugin_utils.h
plugins/anomalydetection/src/num/: cms.h  xxhash_ext.h
plugins/anomalydetection/test/: CMakeLists.txt  README.md  plugin_test_var.h.in
plugins/anomalydetection/test/include/: test_helpers.h
plugins/anomalydetection/test/src/num/: cms.ut.cpp
plugins/cloudtrail_rs/: Cargo.toml  Makefile  README.md
plugins/cloudtrail_rs/src/: aws.rs  config.rs  extract.rs  interval.rs  lib.rs  source.rs
plugins/container/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  OWNERS  README.md
plugins/container/cmake/modules/: btrfs.cmake  caps.cmake  compiler.cmake  fmt.cmake  go-worker.cmake  gtest.cmake  libs.cmake  plugin-sdk-cpp.cmake  reflex.cmake
plugins/container/go-worker/: .gitignore  Makefile  go.mod  go.sum  main_exe.go  main_lib.go  worker.go  worker_api.go  worker_test.go
plugins/container/go-worker/pkg/config/: config.go  config_test.go  log_handler.go  log_handler_test.go
plugins/container/go-worker/pkg/container/: containerd.go  containerd_test.go  cri.go  cri_test.go  docker.go  docker_test.go  engine.go  engine_test.go  fetcher.go  fetcher_test.go  inotifier.go  podman.go  podman_others.go  podman_test.go  probes.go  probes_test.go
plugins/container/go-worker/pkg/event/: event.go
plugins/container/src/: consts.h  container_info.cpp  container_info.h  container_info_json.cpp  container_info_json.h  container_type.h  macros.h  macros.h.in  plugin.cpp  plugin.h  plugin_config.cpp  plugin_config.h  plugin_config_schema.h  table.cpp  utils.h
plugins/container/src/caps/async/: async.cpp  async.tpp
plugins/container/src/caps/extract/: extract.cpp
plugins/container/src/caps/listening/: listening.cpp
plugins/container/src/caps/parse/: parse.cpp
plugins/container/src/matchers/: bpm.cpp  bpm.h  containerd.cpp  containerd.h  cri.cpp  cri.h  docker.cpp  docker.h  libvirt_lxc.cpp  libvirt_lxc.h  lxc.cpp  lxc.h  matcher.cpp  matcher.h  podman.cpp  podman.h  runc.cpp  runc.h  static_container.cpp  static_container.h
plugins/container/test/: CMakeLists.txt  config.cpp  container_info_json.cpp  lru.cpp  matchers.cpp  mounts.cpp  plugin_test_var.h.in
plugins/container/test/src/: extract.cpp
plugins/gcpaudit-rs/: Cargo.toml  Makefile
plugins/gcpaudit-rs/src/: config.rs  extract.rs  lib.rs  source.rs
plugins/gcpaudit_rs/: Cargo.toml  Makefile  README.md  README_RUST.md  TRANSLATION_NOTES.md  TRANSLATION_SUMMARY.md
plugins/gcpaudit_rs/src/: config.rs  extract.rs  lib.rs  source.rs
plugins/k8smeta/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  falco.yaml  vcpkg.json
plugins/k8smeta/cmake/modules/: grpc.cmake  k8s-metacollector.cmake  libs.cmake  plugin-sdk-cpp.cmake  spdlog.cmake
plugins/k8smeta/src/: grpc_client.cpp  grpc_client.h  plugin.cpp  plugin.h  plugin_only_consts.h  shared_with_tests_consts.h
plugins/k8smeta/test/: CMakeLists.txt  README.md  plugin_test_var.h.in
plugins/k8smeta/test/include/k8smeta_tests/: helpers.h
plugins/k8smeta/test/rules/: example_rule.yaml
plugins/k8smeta/test/src/: check_events.cpp  init_config.cpp  parsing_pod.cpp
plugins/krsi/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  OWNERS  README.md  example_rule.yaml  example_rules.yaml  run_local.sh  rustfmt.toml
plugins/krsi/krsi/: Cargo.toml  build.rs
plugins/krsi/krsi-common/: Cargo.toml
plugins/krsi/krsi-common/src/: defs.rs  flags.rs  lib.rs  scap.rs
plugins/krsi/krsi-ebpf/: Cargo.toml  build.rs
plugins/krsi/krsi-ebpf-core/: Cargo.toml  build.rs
plugins/krsi/krsi-ebpf-core/src/: lib.rs
plugins/krsi/krsi-ebpf-core/src/c/: core_helpers.c  core_helpers.h
plugins/krsi/krsi-ebpf/src/: auxbuf.rs  auxmap.rs  connect.rs  defs.rs  file.rs  files.rs  helpers.rs  iouring.rs  lib.rs  main.rs  maps.rs  open.rs  operations.rs  scap.rs  shared_maps.rs  shared_state.rs  sockets.rs  vmlinux.rs
plugins/krsi/krsi-ebpf/src/connect/: maps.rs
plugins/krsi/krsi-ebpf/src/file/: dev.rs
plugins/krsi/krsi-ebpf/src/files/: dev.rs  extract.rs  extractors.rs  getters.rs
plugins/krsi/krsi-ebpf/src/iouring/: extract.rs  getters.rs
plugins/krsi/krsi-ebpf/src/operations/: bind.rs  connect.rs  linkat.rs  mkdirat.rs  open.rs  renameat.rs  socket.rs  symlinkat.rs  unlinkat.rs  writer_helpers.rs
plugins/krsi/krsi-ebpf/src/operations/bind/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/connect/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/linkat/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/mkdirat/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/open/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/renameat/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/symlinkat/: maps.rs
plugins/krsi/krsi-ebpf/src/operations/unlinkat/: maps.rs
plugins/krsi/krsi-ebpf/src/shared_state/: op_info.rs
plugins/krsi/krsi-ebpf/src/sockets/: extractors.rs
plugins/krsi/krsi/src/: ebpf.rs  flags.rs  krsi_event.rs  lib.rs  main.rs
plugins/krsi/test/: Dockerfile  README.md  test.c
plugins/krsi/tools/local_hooks/: dco-pre-commit-msg.sh
registry/: check.py  docgen.py  readme_template.md  registry.yaml
(+295 files in other folders)
