[package]
name = "cloudtrail"
version = "0.16.0"
edition = "2021"
authors = ["The Falco Authors"]
license = "Apache-2.0"
description = "reads cloudtrail JSON data saved to file in the directory specified in the settings"

[lib]
crate-type = ["cdylib"]

[dependencies]
falco_event = "0.5.1"
falco_plugin = "0.5.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_spanned = "1"
schemars = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
aws-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
flate2 = "1"
regex = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
