# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 The Falco Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = ["krsi", "krsi-common", "krsi-ebpf-core", "krsi-ebpf"]
default-members = ["krsi", "krsi-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.3", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
paste = { version = "1.0.15", default-features = false }
anyhow = { version = "1", default-features = false }
zerocopy = { version = "0.8.39", default-features = false }
zerocopy-derive = { version = "0.8.25", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.9", default-features = false }
libc = { version = "0.2.182", default-features = false }
log = { version = "0.4.29", default-features = false }
tokio = { version = "1.49.0", default-features = false }
which = { version = "8.0.0", default-features = false }

[profile.release.package.krsi-ebpf]
debug = 2
codegen-units = 1
