[package]
name = "krsi-ebpf-core"
version = "0.1.0"
edition = "2021"

include = [
    "src/c/core_helpers.c",
    "src/c/core_helpers.h",
]
links = "core_helpers"

[dependencies]
aya-ebpf = { workspace = true }
paste = { workspace = true }

[build-dependencies]
bindgen = { version = "0.71.1", features = ["runtime"] }
cc = "1.2.10"
