# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 The Falco Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "krsi-ebpf-core"
version = "0.1.0"
edition = "2021"

include = [
    "src/c/core_helpers.c",
    "src/c/core_helpers.h",
]
links = "core_helpers"

[dependencies]
aya-ebpf = { workspace = true }
paste = { workspace = true }

[build-dependencies]
bindgen = { version = "0.72.1", features = ["runtime"] }
cc = "1.2.38"
