# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 The Falco Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "krsi-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
krsi-common = { path = "../krsi-common" }
krsi-ebpf-core = { path = "../krsi-ebpf-core" }

cfg-if = "1.0.0"

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
paste = { workspace = true }
zerocopy = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "krsi"
path = "src/main.rs"
