[package]
name = "krsi"
version = "0.1.0"
edition = "2021"

[dependencies]
krsi-common = { path = "../krsi-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
bincode = { version = "2.0", features = ["serde"] }
env_logger = { workspace = true }
falco_plugin = "0.4.2"
libc = { workspace = true }
log = { workspace = true }
serde = "1.0.219"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
hashlru = "0.11.1"
num_cpus = "1.13.0"
bitflags = "2.9.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
krsi-ebpf = { path = "../krsi-ebpf" }

[lib]
crate-type = ["cdylib"]
